Added in Haar citation

--- a/PolyHarmonics_SRS/PolyHarmonics_SRS.bib
+++ b/PolyHarmonics_SRS/PolyHarmonics_SRS.bib
@@ -109,23 +109,36 @@
 	Year = {1986}}
 
 @misc{TDMS,
-     title = {The {NI TDMS} File Format},
-     howpublished = {\href{"http://www.fermentas.com/techinfo/nucleicacids/maplambda.htm"}{"http://www.fermentas.com/techinfo/nucleicacids/maplambda.htm"}},
-     month = {June},
-     year = {2015}}
+     	title = {The {NI TDMS} File Format},
+     	Howpublished = {\href{"http://www.fermentas.com/techinfo/nucleicacids/maplambda.htm"}{"http://www.fermentas.com/techinfo/nucleicacids/maplambda.htm"}},
+     	month = {June},
+     	year = {2015}}
     
 @misc{Volere,
 	author = {James Robertson and Suzanne Robertson},
 	title = {Volere requirements specification Template edition 16},
-	 howpublished = {\href{"www.cs.uic.edu/~i442/VolereMaterials/templateArchive16/c Volere template16.pdf"}{"www.cs.uic.edu/~i442/VolereMaterials/templateArchive16/c Volere template16.pdf"}},
+	Howpublished = {\href{"www.cs.uic.edu/~i442/VolereMaterials/templateArchive16/c Volere template16.pdf"}{"www.cs.uic.edu/~i442/VolereMaterials/templateArchive16/c Volere template16.pdf"}},
 	year = {2012}}
 
 @misc{ResearchPrinciples,
 	title = {Research Integrity Policy},
-	howpublished = {\href{"http://www.mcmaster.ca/policy/faculty/Research/Research\%20Integrity\%20Policy.pdf"}{"http://www.mcmaster.ca/policy/faculty/Research/Research\%20Integrity\%20Policy.pdf"}},
+	Howpublished = {\href{"http://www.mcmaster.ca/policy/faculty/Research/Research\%20Integrity\%20Policy.pdf"}{"http://www.mcmaster.ca/policy/faculty/Research/Research\%20Integrity\%20Policy.pdf"}},
 	month = {June},
 	year = {2013}}
 
 @misc{ProMV,
 	title = {Desktop Multivariable Analysis Software},
-	howpublished = {\href{"http://www.prosensus.ca/solutions/multivariate-analysis-software/promv-desktop-multivariate-analysis"}{"http://www.prosensus.ca/solutions/multivariate-analysis-software/promv-desktop-multivariate-analysis"}}}
+	Howpublished = {\href{"http://www.prosensus.ca/solutions/multivariate-analysis-software/promv-desktop-multivariate-analysis"}{"http://www.prosensus.ca/solutions/multivariate-analysis-software/promv-desktop-multivariate-analysis"}}}
+
+
+@misc{WaveletIntro,
+	Author = {Brani Vidakovic and Peter Mueller},
+	School = {Duke University},
+	Title =  {Wavelets for Kids A Tutorial Introduction},
+	Howpublished = {\href{http://gtwavelet.bme.gatech.edu/wp/kidsA.pdf}{http://gtwavelet.bme.gatech.edu/wp/kidsA.pdf}}}
+
+@misc{WaveletGuide,
+	Author = {Christopher Torrence and Gilbert P. Compo},
+	School = {University of Colorado},
+	Title = {A Practical Guide to Wavelet Analysis},
+	Howpublished = {\href{http://paos.colorado.edu/research/wavelets/bams\_79\_01\_0061.pdf}{http://paos.colorado.edu/research/wavelets/bams\_79\_01\_0061.pdf}}}
