Addition of a new command so that Trevor can add comments to the LaTeX code for the SRS.

--- a/PolyHarmonics_SRS/PolyHarmonics_SRS.tex
+++ b/PolyHarmonics_SRS/PolyHarmonics_SRS.tex
@@ -46,9 +46,7 @@
 \newcommand{\wss}[1]{\authornote{magenta}{SS}{#1}}
 \newcommand{\nd}[1]{\authornote{blue}{ND}{#1}}
 \newcommand{\ah}[1]{\authornote{violet}{AH}{#1}}
-
-\newcommand{\NN}[1]{{\color{red}#1}}
-\newcommand{\WSS}[1]{{\color{blue}#1}}
+\newcommand{\tw}[1]{\authornote{green}{TW}{#1}}
 
 \newcommand{\colZwidth}{1.0\textwidth}
 \newcommand{\blt}{- } %used for bullets in a list
