--- a/PolyHarmonics_SRS/PolyHarmonics_SRS.tex
+++ b/PolyHarmonics_SRS/PolyHarmonics_SRS.tex
@@ -245,9 +245,9 @@ implementation.
 \subsection{Scope of Requirements} 
 
 The scope of the requirements includes analyzing an input signal and
-transforming it to an understandable form. Given a series of LabVIEW files, 
-\progname{} is intended to interpret the data within each and output  
-waveforms as well as text files that can be related to damage in plastic parts.
+transforming it to an understandable form. Given a series of TDMS files generated 
+from LabVIEW DAQ software, \progname{} reads the data, outputs waveforms, 
+and writes text files for interpretaion of damage in plastic parts.
 
 \subsection{Organization of Document}
 
